[gd_scene load_steps=16 format=3 uid="uid://dqtulay2xu1mt"]

[ext_resource type="PackedScene" uid="uid://fcy44fluab2d" path="res://scenes/entities/enemies/enemy.tscn" id="1_jvso1"]
[ext_resource type="Script" path="res://scenes/entities/enemies/warrior.gd" id="2_6yf5n"]
[ext_resource type="PackedScene" uid="uid://bks0ynvp57mq1" path="res://graphics/characters/skeleton warrior/Skeleton_Warrior.glb" id="3_eel0d"]
[ext_resource type="PackedScene" uid="uid://cqxi7o0pyi1mt" path="res://graphics/weapons/bone.gltf.glb" id="4_ioqvi"]
[ext_resource type="PackedScene" uid="uid://dydnnq3ww2uyk" path="res://graphics/weapons/shield.gltf.glb" id="5_l4skq"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_x8st4"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ru7a8"]
animation = &"1H_Melee_Attack_Slice_Diagonal"

[sub_resource type="AnimationNodeOneShot" id="AnimationNodeOneShot_8jy1g"]
fadein_time = 0.2
fadeout_time = 0.2

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_j1h1l"]
animation = &"2H_Melee_Idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_aa1is"]
animation = &"Walking_B"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_vgw2n"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_bw75y"]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_lrxvl"]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_oiy0e"]
states/Idle/node = SubResource("AnimationNodeAnimation_j1h1l")
states/Idle/position = Vector2(354, 100)
states/Running/node = SubResource("AnimationNodeAnimation_aa1is")
states/Running/position = Vector2(501, 100)
transitions = ["Start", "Idle", SubResource("AnimationNodeStateMachineTransition_vgw2n"), "Idle", "Running", SubResource("AnimationNodeStateMachineTransition_bw75y"), "Running", "Idle", SubResource("AnimationNodeStateMachineTransition_lrxvl")]

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_ugc1s"]
graph_offset = Vector2(-370.727, 99.7273)
nodes/AttackAnimation/node = SubResource("AnimationNodeAnimation_ru7a8")
nodes/AttackAnimation/position = Vector2(-100, 380)
nodes/AttackOneShot/node = SubResource("AnimationNodeOneShot_8jy1g")
nodes/AttackOneShot/position = Vector2(280, 240)
nodes/MoveStateMachine/node = SubResource("AnimationNodeStateMachine_oiy0e")
nodes/MoveStateMachine/position = Vector2(40, 220)
nodes/output/position = Vector2(520, 260)
node_connections = [&"AttackOneShot", 0, &"MoveStateMachine", &"AttackOneShot", 1, &"AttackAnimation", &"output", 0, &"AttackOneShot"]

[node name="Warrior" instance=ExtResource("1_jvso1")]
script = ExtResource("2_6yf5n")
attack_radius = 1.4

[node name="CollisionShape3D" parent="." index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_x8st4")

[node name="AnimationTree" parent="." index="1"]
root_node = NodePath("../Skin")
tree_root = SubResource("AnimationNodeBlendTree_ugc1s")
anim_player = NodePath("../Skin/AnimationPlayer")
parameters/AttackOneShot/active = false
parameters/AttackOneShot/internal_active = false
parameters/AttackOneShot/request = 0

[node name="Skin" parent="." index="2" instance=ExtResource("3_eel0d")]

[node name="Skeleton3D" parent="Skin/Rig" index="0"]
bones/1/position = Vector3(0.00841076, 0.375836, 1.21849e-10)
bones/2/rotation = Quaternion(-0.0605995, -0.130282, -0.00797808, 0.989591)
bones/2/scale = Vector3(1, 1, 1)
bones/3/rotation = Quaternion(0.00424113, 0.000138664, -0.00112791, 0.99999)
bones/3/scale = Vector3(1, 1, 1)
bones/4/position = Vector3(0.248044, 0.110857, 0.0825816)
bones/4/rotation = Quaternion(-0.579484, -0.248596, -0.731973, 0.258098)
bones/4/scale = Vector3(1, 0.999999, 1)
bones/5/rotation = Quaternion(4.52749e-08, -2.31521e-08, -0.559014, 0.829158)
bones/6/rotation = Quaternion(1.10745e-08, -5.13173e-13, 0.0266581, 0.999645)
bones/7/rotation = Quaternion(-0.188805, -0.676594, -0.0528332, 0.709776)
bones/8/position = Vector3(8.34836e-10, 0.0961252, -0.0575001)
bones/8/rotation = Quaternion(-6.29278e-09, 4.24393e-09, -0.707107, 0.707107)
bones/9/position = Vector3(-0.176682, 0.111703, 0.0891542)
bones/9/rotation = Quaternion(-0.250119, 0.347956, 0.839709, 0.33355)
bones/9/scale = Vector3(1, 0.999999, 1)
bones/10/rotation = Quaternion(7.34402e-09, 5.80392e-08, 0.568327, 0.822803)
bones/11/rotation = Quaternion(-7.94255e-09, -1.43988e-08, -0.0266581, 0.999645)
bones/12/rotation = Quaternion(-0.239827, 0.219176, -0.107201, 0.939656)
bones/13/position = Vector3(-8.34829e-10, 0.0961251, -0.0574999)
bones/13/rotation = Quaternion(0.155711, -0.189455, 0.670289, 0.700409)
bones/13/scale = Vector3(1, 1, 1)
bones/14/rotation = Quaternion(0.0826936, 0.130455, 0.00646493, 0.987979)
bones/14/scale = Vector3(1, 1, 1)
bones/16/position = Vector3(0.170945, 0.113587, 1.39233e-08)
bones/16/rotation = Quaternion(0.993225, 0.0736438, 0.039546, 0.0807237)
bones/17/rotation = Quaternion(0.365917, 6.3951e-08, -2.60194e-07, 0.930648)
bones/18/rotation = Quaternion(-0.600347, -0.212831, 0.056627, 0.768817)
bones/19/rotation = Quaternion(2.75826e-05, 0.920142, -0.391585, -6.27438e-06)
bones/20/rotation = Quaternion(0.990444, -0.0394438, -0.0119382, 0.131612)
bones/21/rotation = Quaternion(0.40321, -6.49167e-08, 2.77003e-07, 0.915107)
bones/22/rotation = Quaternion(-0.610508, 0.11177, -0.0294352, 0.783531)
bones/23/rotation = Quaternion(-1.51294e-05, 0.920147, -0.391573, 3.68561e-06)
bones/24/rotation = Quaternion(0.707107, -2.29302e-07, -4.60552e-08, 0.707107)
bones/25/rotation = Quaternion(-0.707107, -7.05285e-08, -7.05285e-08, 0.707107)
bones/26/position = Vector3(0.0308395, 0.382458, -2.86687e-15)
bones/26/rotation = Quaternion(1.00138e-08, 1.91522e-09, 0.984639, -0.174603)
bones/27/position = Vector3(3.75295e-09, 0.213436, -1.0343e-08)
bones/27/rotation = Quaternion(-9.99889e-08, 0.391084, 0.920355, -3.39507e-08)
bones/28/position = Vector3(2.3491e-08, 0.16565, -5.09136e-09)
bones/28/rotation = Quaternion(-0.391084, -6.59362e-08, -5.87716e-08, 0.920355)
bones/29/rotation = Quaternion(1, 2.30261e-09, 1.93335e-07, -4.39844e-16)
bones/30/rotation = Quaternion(-6.93878e-18, -9.55588e-16, -1.20164e-08, 1)
bones/31/rotation = Quaternion(0.707107, -3.82385e-08, 1.45009e-07, 0.707107)
bones/32/rotation = Quaternion(-0.707107, -7.05285e-08, -7.05285e-08, 0.707107)
bones/33/rotation = Quaternion(-5.83589e-09, 6.43837e-10, 0.994809, 0.101756)
bones/34/position = Vector3(-1.11482e-08, 0.213436, -2.50942e-15)
bones/34/rotation = Quaternion(-1.05796e-07, 0.391084, 0.920355, -2.58643e-08)
bones/35/position = Vector3(-6.31128e-09, 0.16565, 2.70695e-09)
bones/35/rotation = Quaternion(-0.391084, -6.73931e-08, -6.22002e-08, 0.920355)
bones/36/rotation = Quaternion(1, 3.76526e-09, 1.94879e-07, 7.45058e-09)
bones/37/rotation = Quaternion(1.00614e-16, -6.74098e-17, -1.57416e-08, 1)
bones/38/position = Vector3(0.839842, 0.719866, -0.447558)
bones/38/rotation = Quaternion(-0.707107, -7.27951e-08, -7.27951e-08, 0.707107)
bones/39/position = Vector3(0.340236, 0.815703, 0.410425)
bones/39/rotation = Quaternion(0.614309, 0.0655314, 0.460772, 0.637197)
bones/39/scale = Vector3(1, 1, 1)
bones/40/position = Vector3(-0.87741, 1.03555, -0.447559)
bones/40/rotation = Quaternion(-0.707107, -7.27951e-08, -7.27951e-08, 0.707107)
bones/41/position = Vector3(-0.338544, 0.824657, 0.276838)
bones/41/rotation = Quaternion(0.325862, -0.224652, -0.905183, 0.154887)

[node name="Skeleton_Warrior_Helmet" parent="Skin/Rig/Skeleton3D" index="0"]
transform = Transform3D(0.999996, -0.00276131, 0.000286654, 0.00277262, 0.998586, -0.0530806, -0.000139758, 0.0530812, 0.99859, 0.0288121, 1.18154, -0.074888)

[node name="RightHandSlot" type="BoneAttachment3D" parent="Skin/Rig/Skeleton3D" index="10"]
transform = Transform3D(-0.216718, 0.768876, -0.601549, -0.616589, 0.369925, 0.694962, 0.756868, 0.52152, 0.393912, -0.282136, 0.689865, 0.350719)
bone_name = "handslot.r"
bone_idx = 13

[node name="bone_gltf" parent="Skin/Rig/Skeleton3D/RightHandSlot" index="0" instance=ExtResource("4_ioqvi")]
transform = Transform3D(1, 2.84217e-14, 3.55271e-15, 0, 1, 0, -1.06581e-13, 0, 1, 0, 0.077, 0)

[node name="LeftHandSlot" type="BoneAttachment3D" parent="Skin/Rig/Skeleton3D" index="11"]
transform = Transform3D(0.50669, 0.566791, 0.649625, 0.17937, 0.667718, -0.72248, -0.843262, 0.482597, 0.23666, 0.243484, 0.818556, 0.547725)
bone_name = "handslot.l"
bone_idx = 8

[node name="shield_gltf" parent="Skin/Rig/Skeleton3D/LeftHandSlot" index="0" instance=ExtResource("5_l4skq")]
transform = Transform3D(0.999429, -0.0297763, -0.0159365, 0.0301299, 0.999294, 0.0224505, 0.0152566, -0.0229179, 0.999621, 0.0186631, 0.000734687, 0.113819)

[node name="AttackTimer" parent="Timers" index="0"]
wait_time = 2.0
autostart = true

[connection signal="timeout" from="Timers/AttackTimer" to="." method="_on_attack_timer_timeout"]

[editable path="Skin"]
